--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="light_gray">#FFCFCFCF</color>
     <color name="dark_gray">#FF707070</color>
+    <color name="transparent">#00000000</color>
 </resources>
